HTML dinámico (parcialmente)

--- a/narutochibi.html
+++ b/narutochibi.html
@@ -23,12 +23,8 @@
                 <h1 id="title" >NARUTO *chibi* GAME</h1>
                 <h2>Choose your jutsu:</h2>
                 
-                <div class="attack-cards">   
-                    <button id="fire-button" class="attack-button">Katon 🔥</button>
-                    <button id="water-button" class="attack-button">Suiton 💧</button>
-                    <button id="earth-button" class="attack-button">Doton 🌱</button>
-                    <button id="wind-button" class="attack-button">Fuuton 🌪️</button>
-                    <button id="lightning-button" class="attack-button">Raiton ⚡</button>
+                <div id="attacks-container" class="attack-cards">   
+                    
                 </div>
 
                 <div id="messages">
